Changes for 2.1.0

New features:
..F....... [ZBXNEXT-1323] implemented macros in script confirmation text (Eduard)
.......PS. [ZBX-3449] added support of multiple dynamic SNMP indexes (Sasha)
..F....... [ZBXNEXT-1441] added media type name to action operations description (Vedmak)
A.F.I...S. [ZBXNEXT-1186] increased length to 2048 characters of expression field for triggers (Sasha)
..F....... [ZBXNEXT-1433] moved operation delay field to Operation tab (Eduard)
..F.....S. [ZBX-3236] added support of value mapping for a character data (Sasha, Vedmak)
.......P.. [ZBX-3817] improved performance of the "data sender" process (Sasha)
.......PS. [ZBX-5436] added support of AllowRoot paramater by server and proxy daemons (Sasha)
..F....... [ZBX-5180] maintenance periods form redesign (Vedmak)
.......PS. [ZBXNEXT-1335] pingers work without connection to a database (Sasha)
..F....... [ZBX-5127] regular expressions form redesign (Vedmak)

Bug fixes:
A......... [ZBX-5714] fixed inconsistency between shorten and refer in UserMacro API (Eduard)
..F....... [ZBX-5711] added caching for frontend favorite values (Toms)
..F....... [ZBX-5711] removed redundant queries when editing web scenario (Toms)
A.F....... [ZBX-5565] fixed html is returned on api requests if db is down (Vedmak)
..F....... [ZBX-3396] added error message if FreeType support is missing (Toms)
...G...... [ZBX-4355] fixed response on check inodes on file systems not supporting them (Sasha)
..F....... [ZBX-5673] fixed incorrect Y-scale if point value > 10 PB (Oleg)
..F....... [ZBX-875] fixed duplicate Y-scale (Oleg)
..F....... [ZBX-3934] unified color codes validation in frontend (Vedmak)
A......... [ZBX-3684] fixed template.get method returns excessive 'hostid' field (Vedmak)
A......... [ZBX-5498] improved performance of template linkage operations in API (Vedmak)
A......... [ZBX-5498] applications api refactoring (Vedmak)
..F....... [ZBX-5560] fixed recovery sound saved incorrectly in user profile (Vedmak)